# heterogeneous_factory

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: factory_static_registrator.h  heterogeneous_factory.h  heterogeneous_static_factory.h
include/private/: factory_static_registrator_impl.h  heterogeneous_factory_impl.h  heterogeneous_static_factory_impl.h  traits.h
test/: CMakeLists.txt  factory_test.cpp
test/autotest/: CMakeLists.txt  factory_test.cpp
test/lib/: CMakeLists.txt  SecondTestObject.cpp  SecondTestObject.h  TestInterface.h  TestInterfaceFactory.cpp  TestInterfaceFactory.h  TestObject.cpp  TestObject.h
